[UD2][T3] Subastas - Progreso
-itemdetalles.php Terminado y mejorado
-gestorBD_puja.php Se han añadido funciones que permiten recuperar pujas realizadas por un usuario en la fecha actual, recuperar pujas sobre un item y añadir una nueva puja a la base de datos
-gestorBD_usuario.php Se ha añadido una función que recupera un usuario de la base de datos dado su identificado
-logout.php Arreglado y cambiado de directorio
-style.css Arreglado fallo de escritura en el archivo de estilo ofrecido por Akaitz
-nuevoitem.php Creado
-.gitignore Mejorado
-Arreglos y mejoras de limpieza en archivos varios

--- a/Tema3/Subastas/styles/style.css
+++ b/Tema3/Subastas/styles/style.css
@@ -109,7 +109,7 @@ table {
 }
 th {
     letter-spacing: 2.5px;
-    background: #eeeeeee;
+    background: #eeeeee;
     color: #000000;
     text-transform: uppercase;
     text-align: center;
